--- a/src/vgui2/vgui_controls/vgui_controls.vcxproj.filters
+++ b/src/vgui2/vgui_controls/vgui_controls.vcxproj.filters
@@ -532,6 +532,9 @@
     <None Include="..\..\vpc_scripts\protobuf_builder.vpc">
       <Filter>VPC Scripts</Filter>
     </None>
+    <None Include="..\..\vpc_scripts\pysource_base.vpc">
+      <Filter>VPC Scripts</Filter>
+    </None>
     <None Include="..\..\vpc_scripts\source_base.vpc">
       <Filter>VPC Scripts</Filter>
     </None>
