--- a/src/game/server/server_pysource.vcxproj.filters
+++ b/src/game/server/server_pysource.vcxproj.filters
@@ -1565,6 +1565,9 @@
     <ClInclude Include="world.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\game\shared\csbox\RTT\worldlight.h">
+      <Filter>Source Files\Combine Sandbox</Filter>
+    </ClInclude>
     <ClInclude Include="hl2\ai_behavior_actbusy.h">
       <Filter>Source Files\HL2 DLL</Filter>
     </ClInclude>
@@ -1734,6 +1737,9 @@
       <Filter>Source Files\HL2 DLL</Filter>
     </ClInclude>
     <ClInclude Include="hl2\vehicle_crane.h">
+      <Filter>Source Files\HL2 DLL</Filter>
+    </ClInclude>
+    <ClInclude Include="hl2\weapon_alyxgun.h">
       <Filter>Source Files\HL2 DLL</Filter>
     </ClInclude>
     <ClInclude Include="hl2\weapon_crowbar.h">
@@ -3140,6 +3146,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\game\shared\csbox\weapons\weapon_physgun.cpp">
+      <Filter>Source Files\Combine Sandbox</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\csbox\RTT\worldlight.cpp">
       <Filter>Source Files\Combine Sandbox</Filter>
     </ClCompile>
     <ClCompile Include="hl2\ai_allymanager.cpp">
