why trollin' like a bitch aint you tired? try'na stike a cord and its probably a minorrrrrr

--- a/game/mod_portal/cfg/config_default.cfg
+++ b/game/mod_portal/cfg/config_default.cfg
@@ -35,6 +35,7 @@ bind "F9"			"load quick"
 bind "PAUSE" 		"pause"
 bind "z"			"+zoom"
 bind "g"			"phys_swap"
+bind "v"            "noclip"
 
 // on Mac don't cause CTRL to be bound as it doesn't play well with mouse wheel
 // move duck and walk across one key as we had the command key to play with
