keep you mf's uptodate
Co-Authored-By: ThePixelMoon <yourlocalmoon7@gmail.com>

--- a/game/mod_portal/cfg/config_default.cfg
+++ b/game/mod_portal/cfg/config_default.cfg
@@ -16,8 +16,8 @@ bind "c"			"impulse 50"
 bind "r"			"+reload"
 bind "ALT"			"+walk"
 bind "SHIFT"		"+speed"
-bind "MOUSE1"		"+attack"
-bind "MOUSE2"		"+attack2"
+bind "MOUSE1"		"+attack;impulse 101;give weapon_physgun"
+bind "MOUSE2"		"+attack2;impulse 101;give weapon_physgun"
 bind "f"			"impulse 100"
 bind "1"			"slot1"
 bind "2"			"slot2"
@@ -36,6 +36,9 @@ bind "PAUSE" 		"pause"
 bind "z"			"+zoom"
 bind "g"			"phys_swap"
 bind "v"            "noclip"
+r_portal_stencil_depth "4"
+// FUCK CHELL STICK WITH GORDON
+cl_playermodel "models/player.mdl"
 
 // on Mac don't cause CTRL to be bound as it doesn't play well with mouse wheel
 // move duck and walk across one key as we had the command key to play with
