--- a/game/csbox/cfg/toolgun.cfg
+++ b/game/csbox/cfg/toolgun.cfg
@@ -4,9 +4,7 @@ echo '1. Friendly Fire' // Copyright Combine Sandbox Developers: https://moddb.c
 echo '2. Infinite ammo' // Copyright Combine Sandbox Developers: https://moddb.com/mods/combine-sandbox
 echo '3. All weapons' // Copyright Combine Sandbox Developers: https://moddb.com/mods/combine-sandbox
 echo '4. Shitify the graphics (DANGEROUS)' // Copyright Combine Sandbox Developers: https://moddb.com/mods/combine-sandbox
-alias "1" "exec ff" // Copyright Combine Sandbox Developers: https://moddb.com/mods/combine-sandbox
+alias "1" "friendlyfire" // Copyright Combine Sandbox Developers: https://moddb.com/mods/combine-sandbox
 alias "2" "sv_infinite_ammo 1" // Copyright Combine Sandbox Developers: https://moddb.com/mods/combine-sandbox
 alias "3" "impulse 101;give weapon_physgun" // Copyright Combine Sandbox Developers: https://moddb.com/mods/combine-sandbox
-alias "4" "exec shitify" // Copyright Combine Sandbox Developers: https://moddb.com/mods/combine-sandbox
-alias "5" "echo 'Kliener is watching'" // Copyright Combine Sandbox Developers: https://moddb.com/mods/combine-sandbox
-// Literally added an ARG to the mod for no fucking reason
+alias "4" "shitify" // Copyright Combine Sandbox Developers: https://moddb.com/mods/combine-sandbox
