--- a/src/game/client/client_csbox.vcxproj.filters
+++ b/src/game/client/client_csbox.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Source Files\HL2 DLL">
       <UniqueIdentifier>{3C43D38A-46AF-2183-A5E5-44383B1D2652}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\ImGUI">
+      <UniqueIdentifier>{54A04FB0-AB80-2973-A8A8-6750F45F04ED}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Source Files\Portal">
       <UniqueIdentifier>{1D68172E-98A3-968F-311D-AA875EE4A3FD}</UniqueIdentifier>
     </Filter>
@@ -854,7 +857,19 @@
     <ClInclude Include="iloadingdisc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\imgui\imconfig_source.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="imessagechars.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\imgui\imgui_impl_source.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\imgui\imgui_system.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\imgui\imgui_window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="in_main.h">
@@ -2593,6 +2608,12 @@
     <ClCompile Include="..\..\game\shared\igamesystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\imgui\imgui_impl_source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\imgui\imgui_system.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="in_camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -3265,6 +3286,21 @@
     <ClCompile Include="hl2\vgui_rootpanel_hl2.cpp">
       <Filter>Source Files\HL2 DLL</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\thirdparty\imgui\imgui.cpp">
+      <Filter>Source Files\ImGUI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\imgui\imgui_demo.cpp">
+      <Filter>Source Files\ImGUI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\imgui\imgui_draw.cpp">
+      <Filter>Source Files\ImGUI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\imgui\imgui_tables.cpp">
+      <Filter>Source Files\ImGUI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\imgui\imgui_widgets.cpp">
+      <Filter>Source Files\ImGUI</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\game\shared\portal\achievements_portal.cpp">
       <Filter>Source Files\Portal</Filter>
     </ClCompile>
@@ -3623,6 +3659,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\game\client\client_base.vpc">
+      <Filter>VPC Scripts</Filter>
+    </None>
+    <None Include="..\..\imgui\imgui_system.vpc">
       <Filter>VPC Scripts</Filter>
     </None>
     <None Include="..\..\vpc_scripts\loadaddress.vpc">
