--- a/game/csbox/cfg/config_default.cfg
+++ b/game/csbox/cfg/config_default.cfg
@@ -57,6 +57,7 @@ bind "MWHEELUP" "invprev"
 bind "MWHEELDOWN" "invnext"
 bind "v"    "sv_cheats 1;noclip"
 bind "q" "+spawnmenu"
+bind "f" "+kick"
 
 cl_chatfilter_version "1"
 mat_software_aa_strength "0.000000"
@@ -71,3 +72,4 @@ alias +spawnmenu "cl_spawnmenu 1"
 alias -spawnmenu "cl_spawnmenu 0"
 alias +flashlight "mp_flashlight 1"
 alias -flashlight "mp_flashlight 0"
+alias +kick "give weapon_kick"
